@@ -8,14 +8,13 @@ package com.powsybl.openloadflow.equations;
 
 import com.powsybl.math.matrix.DenseMatrix;
 import com.powsybl.openloadflow.network.ElementType;
-import com.powsybl.openloadflow.network.LfElement;
 import com.powsybl.openloadflow.util.Evaluable;
 
 import java.io.IOException;
 import java.io.Writer;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
+import java.util.function.DoubleSupplier;
 
 /**
  * An equation term, i.e part of the equation sum.
@@ -28,11 +27,16 @@ public interface EquationTerm<V extends Enum<V> & Quantity, E extends Enum<E> & 
 
         private final EquationTerm<V, E> term;
 
-        private final double scalar;
+        private final DoubleSupplier scalarSupplier;
 
         MultiplyByScalarEquationTerm(EquationTerm<V, E> term, double scalar) {
+            this(term, () -> scalar);
+        }
+
+        MultiplyByScalarEquationTerm(EquationTerm<V, E> term, DoubleSupplier scalarSupplier) {
             this.term = Objects.requireNonNull(term);
-            this.scalar = scalar;
+            this.scalarSupplier = Objects.requireNonNull(scalarSupplier);
+            term.setSelf(this);
         }
 
         @Override
@@ -53,6 +57,11 @@ public interface EquationTerm<V extends Enum<V> & Quantity, E extends Enum<E> & 
         @Override
         public boolean isActive() {
             return term.isActive();
+        }
+
+        @Override
+        public void setSelf(EquationTerm<V, E> self) {
+            term.setSelf(self);
         }
 
         @Override
@@ -77,12 +86,12 @@ public interface EquationTerm<V extends Enum<V> & Quantity, E extends Enum<E> & 
 
         @Override
         public double eval() {
-            return scalar * term.eval();
+            return scalarSupplier.getAsDouble() * term.eval();
         }
 
         @Override
         public double der(Variable<V> variable) {
-            return scalar * term.der(variable);
+            return scalarSupplier.getAsDouble() * term.der(variable);
         }
 
         @Override
@@ -92,20 +101,24 @@ public interface EquationTerm<V extends Enum<V> & Quantity, E extends Enum<E> & 
 
         @Override
         public double rhs() {
-            return scalar * term.rhs();
+            return scalarSupplier.getAsDouble() * term.rhs();
         }
 
         @Override
         public double calculateSensi(DenseMatrix x, int column) {
-            return scalar * term.calculateSensi(x, column);
+            return scalarSupplier.getAsDouble() * term.calculateSensi(x, column);
         }
 
         @Override
         public void write(Writer writer) throws IOException {
-            writer.write(Double.toString(scalar));
+            writer.write(Double.toString(scalarSupplier.getAsDouble()));
             writer.write(" * ");
             term.write(writer);
         }
+    }
+
+    static <V extends Enum<V> & Quantity, E extends Enum<E> & Quantity> EquationTerm<V, E> multiply(EquationTerm<V, E> term, DoubleSupplier scalarSupplier) {
+        return new MultiplyByScalarEquationTerm<>(term, scalarSupplier);
     }
 
     static <V extends Enum<V> & Quantity, E extends Enum<E> & Quantity> EquationTerm<V, E> multiply(EquationTerm<V, E> term, double scalar) {
@@ -114,23 +127,24 @@ public interface EquationTerm<V extends Enum<V> & Quantity, E extends Enum<E> & 
 
     class VariableEquationTerm<V extends Enum<V> & Quantity, E extends Enum<E> & Quantity> extends AbstractEquationTerm<V, E> {
 
-        private final int elementNum;
-
         private final List<Variable<V>> variables;
 
-        VariableEquationTerm(int elementNum, V variableType, VariableSet<V> variableSet) {
-            this.elementNum = elementNum;
-            this.variables = Collections.singletonList(variableSet.getVariable(elementNum, variableType));
+        VariableEquationTerm(Variable<V> variable) {
+            this.variables = List.of(Objects.requireNonNull(variable));
+        }
+
+        private Variable<V> getVariable() {
+            return variables.get(0);
         }
 
         @Override
         public ElementType getElementType() {
-            return variables.get(0).getType().getElementType();
+            return getVariable().getType().getElementType();
         }
 
         @Override
         public int getElementNum() {
-            return elementNum;
+            return getVariable().getElementNum();
         }
 
         @Override
@@ -140,7 +154,7 @@ public interface EquationTerm<V extends Enum<V> & Quantity, E extends Enum<E> & 
 
         @Override
         public double eval() {
-            return stateVector.get(variables.get(0).getRow());
+            return stateVector.get(getVariable().getRow());
         }
 
         @Override
@@ -150,24 +164,13 @@ public interface EquationTerm<V extends Enum<V> & Quantity, E extends Enum<E> & 
 
         @Override
         public double calculateSensi(DenseMatrix x, int column) {
-            return x.get(variables.get(0).getRow(), column);
+            return x.get(getVariable().getRow(), column);
         }
 
         @Override
         public void write(Writer writer) throws IOException {
-            variables.get(0).write(writer);
+            getVariable().write(writer);
         }
-    }
-
-    static <V extends Enum<V> & Quantity, E extends Enum<E> & Quantity> VariableEquationTerm<V, E> createVariableTerm(LfElement element, V variableType, VariableSet<V> variableSet) {
-        Objects.requireNonNull(element);
-        Objects.requireNonNull(variableType);
-        Objects.requireNonNull(variableSet);
-        if (element.getType() != variableType.getElementType()) {
-            throw new IllegalArgumentException("Wrong variable element type: " + variableType.getElementType()
-                + ", expected: " + element.getType());
-        }
-        return new VariableEquationTerm<>(element.getNum(), variableType, variableSet);
     }
 
     Equation<V, E> getEquation();
@@ -177,6 +180,8 @@ public interface EquationTerm<V extends Enum<V> & Quantity, E extends Enum<E> & 
     boolean isActive();
 
     void setActive(boolean active);
+
+    void setSelf(EquationTerm<V, E> self);
 
     ElementType getElementType();
 
@@ -224,4 +229,16 @@ public interface EquationTerm<V extends Enum<V> & Quantity, E extends Enum<E> & 
     double calculateSensi(DenseMatrix x, int column);
 
     void write(Writer writer) throws IOException;
+
+    default EquationTerm<V, E> multiply(DoubleSupplier scalarSupplier) {
+        return multiply(this, scalarSupplier);
+    }
+
+    default EquationTerm<V, E> multiply(double scalar) {
+        return multiply(this, scalar);
+    }
+
+    default EquationTerm<V, E> minus() {
+        return multiply(-1);
+    }
 }
