@@ -13,8 +13,10 @@ import com.powsybl.computation.local.LocalComputationManager;
 import com.powsybl.contingency.BranchContingency;
 import com.powsybl.contingency.Contingency;
 import com.powsybl.contingency.ContingencyContext;
-import com.powsybl.contingency.ContingencyContextType;
-import com.powsybl.iidm.network.*;
+import com.powsybl.iidm.network.Branch;
+import com.powsybl.iidm.network.Injection;
+import com.powsybl.iidm.network.Network;
+import com.powsybl.iidm.network.VariantManagerConstants;
 import com.powsybl.iidm.network.test.EurostagTutorialExample1Factory;
 import com.powsybl.loadflow.LoadFlowParameters;
 import com.powsybl.loadflow.LoadFlowResult;
@@ -25,17 +27,10 @@ import com.powsybl.openloadflow.network.HvdcNetworkFactory;
 import com.powsybl.openloadflow.network.SlackBusSelectionMode;
 import com.powsybl.openloadflow.util.LoadFlowAssert;
 import com.powsybl.sensitivity.*;
-import com.powsybl.sensitivity.factors.BranchFlowPerInjectionIncrease;
-import com.powsybl.sensitivity.factors.BranchFlowPerLinearGlsk;
-import com.powsybl.sensitivity.factors.BranchFlowPerPSTAngle;
-import com.powsybl.sensitivity.factors.functions.BranchFlow;
-import com.powsybl.sensitivity.factors.functions.BranchIntensity;
-import com.powsybl.sensitivity.factors.variables.InjectionIncrease;
-import com.powsybl.sensitivity.factors.variables.LinearGlsk;
-import com.powsybl.sensitivity.factors.variables.PhaseTapChangerAngle;
 
-import java.util.*;
-import java.util.concurrent.CompletableFuture;
+import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
 import java.util.concurrent.CompletionException;
 import java.util.stream.Collectors;
 
@@ -46,9 +41,13 @@ import static org.junit.jupiter.api.Assertions.*;
  */
 public abstract class AbstractSensitivityAnalysisTest extends AbstractConverterTest {
 
+    protected static final double SENSI_CHANGE = 10e-4;
+
     protected final DenseMatrixFactory matrixFactory = new DenseMatrixFactory();
 
     protected final OpenSensitivityAnalysisProvider sensiProvider = new OpenSensitivityAnalysisProvider(matrixFactory);
+
+    protected final SensitivityAnalysis.Runner sensiRunner = new SensitivityAnalysis.Runner(sensiProvider);
 
     protected static SensitivityAnalysisParameters createParameters(boolean dc, String slackBusId, boolean distributedSlack) {
         return createParameters(dc, List.of(slackBusId), distributedSlack);
@@ -57,12 +56,11 @@ public abstract class AbstractSensitivityAnalysisTest extends AbstractConverterT
     protected static SensitivityAnalysisParameters createParameters(boolean dc, List<String> slackBusesIds, boolean distributedSlack) {
         SensitivityAnalysisParameters sensiParameters = new SensitivityAnalysisParameters();
         LoadFlowParameters lfParameters = sensiParameters.getLoadFlowParameters();
-        lfParameters.setDc(dc);
-        lfParameters.setDistributedSlack(distributedSlack);
-        OpenLoadFlowParameters lfParametersExt = new OpenLoadFlowParameters()
+        lfParameters.setDc(dc)
+                .setDistributedSlack(distributedSlack);
+        OpenLoadFlowParameters.create(lfParameters)
                 .setSlackBusSelectionMode(SlackBusSelectionMode.NAME)
                 .setSlackBusesIds(slackBusesIds);
-        lfParameters.addExtension(OpenLoadFlowParameters.class, lfParametersExt);
         return sensiParameters;
     }
 
@@ -73,71 +71,65 @@ public abstract class AbstractSensitivityAnalysisTest extends AbstractConverterT
     protected static SensitivityAnalysisParameters createParameters(boolean dc) {
         SensitivityAnalysisParameters sensiParameters = new SensitivityAnalysisParameters();
         LoadFlowParameters lfParameters = sensiParameters.getLoadFlowParameters();
-        lfParameters.setDc(dc);
-        lfParameters.setDistributedSlack(true);
-        OpenLoadFlowParameters lfParametersExt = new OpenLoadFlowParameters()
+        lfParameters.setDc(dc)
+                .setDistributedSlack(true);
+        OpenLoadFlowParameters.create(lfParameters)
                 .setSlackBusSelectionMode(SlackBusSelectionMode.MOST_MESHED);
-        lfParameters.addExtension(OpenLoadFlowParameters.class, lfParametersExt);
         return sensiParameters;
     }
 
-    protected static <T extends Injection<T>> InjectionIncrease createInjectionIncrease(T injection) {
-        return new InjectionIncrease(injection.getId(), injection.getId(), injection.getId());
+    protected static <T extends Injection<T>> List<SensitivityFactor> createFactorMatrix(List<T> injections, List<Branch> branches, String contingencyId) {
+        Objects.requireNonNull(injections);
+        Objects.requireNonNull(branches);
+        return injections.stream().flatMap(injection -> branches.stream().map(branch -> createBranchFlowPerInjectionIncrease(branch.getId(), injection.getId(), contingencyId))).collect(Collectors.toList());
     }
 
     protected static <T extends Injection<T>> List<SensitivityFactor> createFactorMatrix(List<T> injections, List<Branch> branches) {
-        Objects.requireNonNull(injections);
-        Objects.requireNonNull(branches);
-        return injections.stream().flatMap(injection -> branches.stream().map(branch -> new BranchFlowPerInjectionIncrease(createBranchFlow(branch),
-                createInjectionIncrease(injection)))).collect(Collectors.toList());
+        return createFactorMatrix(injections, branches, null);
     }
 
-    protected static BranchFlow createBranchFlow(Branch branch) {
-        return new BranchFlow(branch.getId(), branch.getNameOrId(), branch.getId());
+    protected static SensitivityFactor createBranchFlowPerInjectionIncrease(String functionId, String variableId, String contingencyId) {
+        return new SensitivityFactor(SensitivityFunctionType.BRANCH_ACTIVE_POWER, functionId, SensitivityVariableType.INJECTION_ACTIVE_POWER, variableId, false, Objects.isNull(contingencyId) ? ContingencyContext.all() : ContingencyContext.specificContingency(contingencyId));
     }
 
-    protected static BranchIntensity createBranchIntensity(Branch branch) {
-        return new BranchIntensity(branch.getId(), branch.getNameOrId(), branch.getId());
+    protected static SensitivityFactor createBranchFlowPerInjectionIncrease(String functionId, String variableId) {
+        return createBranchFlowPerInjectionIncrease(functionId, variableId, null);
     }
 
-    protected static double getValue(SensitivityAnalysisResult result, String variableId, String functionId) {
-        return getValue(result.getSensitivityValues(), variableId, functionId);
+    protected static SensitivityFactor createBranchFlowPerLinearGlsk(String functionId, String variableId, String contingencyId) {
+        return createBranchFlowPerLinearGlsk(functionId, variableId, Objects.isNull(contingencyId) ? ContingencyContext.all() : ContingencyContext.specificContingency(contingencyId));
     }
 
-    protected static double getValue(Collection<SensitivityValue> result, String variableId, String functionId) {
-        return result.stream().filter(value -> value.getFactor().getVariable().getId().equals(variableId) && value.getFactor().getFunction().getId().equals(functionId))
-            .findFirst()
-            .map(SensitivityValue::getValue)
-            .orElseThrow();
+    protected static SensitivityFactor createBranchFlowPerLinearGlsk(String functionId, String variableId, ContingencyContext contingencyContext) {
+        return new SensitivityFactor(SensitivityFunctionType.BRANCH_ACTIVE_POWER, functionId, SensitivityVariableType.INJECTION_ACTIVE_POWER, variableId, true, contingencyContext);
     }
 
-    protected static double getContingencyValue(SensitivityAnalysisResult result, String contingencyId, String variableId, String functionId) {
-        return result.getSensitivityValuesContingencies().get(contingencyId).stream().filter(value -> value.getFactor().getVariable().getId().equals(variableId) && value.getFactor().getFunction().getId().equals(functionId))
-                     .findFirst()
-                     .map(SensitivityValue::getValue)
-                     .orElseThrow();
+    protected static SensitivityFactor createBranchFlowPerLinearGlsk(String functionId, String variableId) {
+        return createBranchFlowPerLinearGlsk(functionId, variableId, (String) null);
     }
 
-    protected static double getContingencyValue(List<SensitivityValue> result, String variableId, String functionId) {
-        return result.stream().filter(value -> value.getFactor().getVariable().getId().equals(variableId) && value.getFactor().getFunction().getId().equals(functionId))
-                     .findFirst()
-                     .map(SensitivityValue::getValue)
-                     .orElseThrow();
+    protected static SensitivityFactor createBranchFlowPerPSTAngle(String functionId, String variableId, String contingencyId) {
+        return new SensitivityFactor(SensitivityFunctionType.BRANCH_ACTIVE_POWER, functionId, SensitivityVariableType.TRANSFORMER_PHASE, variableId, false, Objects.isNull(contingencyId) ? ContingencyContext.all() : ContingencyContext.specificContingency(contingencyId));
     }
 
-    protected static double getFunctionReference(SensitivityAnalysisResult result, String functionId) {
-        return getFunctionReference(result.getSensitivityValues(), functionId);
+    protected static SensitivityFactor createBranchFlowPerPSTAngle(String functionId, String variableId) {
+        return createBranchFlowPerPSTAngle(functionId, variableId, null);
     }
 
-    protected static double getContingencyFunctionReference(SensitivityAnalysisResult result, String functionId, String contingencyId) {
-        return getFunctionReference(result.getSensitivityValuesContingencies().get(contingencyId), functionId);
+    protected static SensitivityFactor createBranchIntensityPerPSTAngle(String functionId, String variableId) {
+        return new SensitivityFactor(SensitivityFunctionType.BRANCH_CURRENT, functionId, SensitivityVariableType.TRANSFORMER_PHASE, variableId, false, ContingencyContext.all());
     }
 
-    protected static double getFunctionReference(Collection<SensitivityValue> result, String functionId) {
-        return result.stream().filter(value -> value.getFactor().getFunction().getId().equals(functionId))
-            .findFirst()
-            .map(SensitivityValue::getFunctionReference)
-            .orElseThrow();
+    protected static SensitivityFactor createBusVoltagePerTargetV(String functionId, String variableId, String contingencyId) {
+        return new SensitivityFactor(SensitivityFunctionType.BUS_VOLTAGE, functionId, SensitivityVariableType.BUS_TARGET_VOLTAGE, variableId, false, Objects.isNull(contingencyId) ? ContingencyContext.all() : ContingencyContext.specificContingency(contingencyId));
+    }
+
+    protected static SensitivityFactor createBusVoltagePerTargetV(String functionId, String variableId) {
+        return createBusVoltagePerTargetV(functionId, variableId, null);
+    }
+
+    protected static SensitivityFactor createHvdcInjection(String functionId, String variableId) {
+        return new SensitivityFactor(SensitivityFunctionType.BRANCH_ACTIVE_POWER, functionId, SensitivityVariableType.HVDC_LINE_ACTIVE_POWER, variableId, false, ContingencyContext.all());
     }
 
     protected void runAcLf(Network network) {
@@ -185,14 +177,13 @@ public abstract class AbstractSensitivityAnalysisTest extends AbstractConverterT
         runAcLf(network);
 
         SensitivityAnalysisParameters sensiParameters = createParameters(dc, "VLLOAD_0");
-        SensitivityFactorsProvider factorsProvider = n -> {
-            Branch branch = n.getBranch("NHV1_NHV2_1");
-            return Collections.singletonList(new BranchFlowPerInjectionIncrease(createBranchFlow(branch),
-                    new InjectionIncrease("a", "a", "a")));
-        };
-        CompletableFuture<SensitivityAnalysisResult> sensiResult = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID,
-                factorsProvider, Collections.emptyList(), sensiParameters, LocalComputationManager.getDefault());
-        CompletionException e = assertThrows(CompletionException.class, () -> sensiResult.join());
+
+        List<SensitivityFactor> factors = Collections.singletonList(createBranchFlowPerInjectionIncrease("NHV1_NHV2_1", "a"));
+
+        List<Contingency> contingencies = Collections.emptyList();
+        List<SensitivityVariableSet> variableSets = Collections.emptyList();
+
+        CompletionException e = assertThrows(CompletionException.class, () -> sensiRunner.run(network, factors, contingencies, variableSets, sensiParameters));
         assertTrue(e.getCause() instanceof PowsyblException);
         assertEquals("Injection 'a' not found", e.getCause().getMessage());
     }
@@ -201,22 +192,13 @@ public abstract class AbstractSensitivityAnalysisTest extends AbstractConverterT
         Network network = EurostagTutorialExample1Factory.create();
 
         SensitivityAnalysisParameters sensiParameters = createParameters(dc, "VLLOAD_0");
-        SensitivityFactorsProvider factorsProvider = new SensitivityFactorsProvider() {
-            @Override
-            public List<SensitivityFactor> getCommonFactors(Network network) {
-                return Collections.emptyList();
-            }
 
-            @Override
-            public List<SensitivityFactor> getAdditionalFactors(Network network) {
-                Branch branch = network.getBranch("NHV1_NHV2_1");
-                return Collections.singletonList(new BranchFlowPerInjectionIncrease(createBranchFlow(branch),
-                    new InjectionIncrease("a", "a", "a")));
-            }
-        };
-        CompletableFuture<SensitivityAnalysisResult> sensiResult = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID,
-            factorsProvider, Collections.emptyList(), sensiParameters, LocalComputationManager.getDefault());
-        CompletionException e = assertThrows(CompletionException.class, () -> sensiResult.join());
+        List<SensitivityFactor> factors = Collections.singletonList(createBranchFlowPerInjectionIncrease("NHV1_NHV2_1", "a"));
+
+        List<Contingency> contingencies = Collections.emptyList();
+        List<SensitivityVariableSet> variableSets = Collections.emptyList();
+
+        CompletionException e = assertThrows(CompletionException.class, () -> sensiRunner.run(network, factors, contingencies, variableSets, sensiParameters));
         assertTrue(e.getCause() instanceof PowsyblException);
         assertEquals("Injection 'a' not found", e.getCause().getMessage());
     }
@@ -225,27 +207,14 @@ public abstract class AbstractSensitivityAnalysisTest extends AbstractConverterT
         Network network = EurostagTutorialExample1Factory.create();
 
         SensitivityAnalysisParameters sensiParameters = createParameters(dc, "VLLOAD_0");
-        SensitivityFactorsProvider factorsProvider = new SensitivityFactorsProvider() {
-            @Override
-            public List<SensitivityFactor> getCommonFactors(Network network) {
-                return Collections.emptyList();
-            }
 
-            @Override
-            public List<SensitivityFactor> getAdditionalFactors(Network network) {
-                return Collections.emptyList();
-            }
+        List<SensitivityFactor> factors = List.of(createBranchFlowPerInjectionIncrease("NHV1_NHV2_1", "a"));
 
-            @Override
-            public List<SensitivityFactor> getAdditionalFactors(Network network, String contingencyId) {
-                Branch branch = network.getBranch("NHV1_NHV2_1");
-                return Collections.singletonList(new BranchFlowPerInjectionIncrease(createBranchFlow(branch),
-                    new InjectionIncrease("a", "a", "a")));
-            }
-        };
-        CompletableFuture<SensitivityAnalysisResult> sensiResult = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID,
-            factorsProvider, Collections.singletonList(new Contingency("a", new BranchContingency("NHV1_NHV2_2"))), sensiParameters, LocalComputationManager.getDefault());
-        CompletionException e = assertThrows(CompletionException.class, () -> sensiResult.join());
+        List<Contingency> contingencies = List.of(new Contingency("a", new BranchContingency("NHV1_NHV2_2")));
+
+        List<SensitivityVariableSet> variableSets = Collections.emptyList();
+
+        CompletionException e = assertThrows(CompletionException.class, () -> sensiRunner.run(network, factors, contingencies, variableSets, sensiParameters));
         assertTrue(e.getCause() instanceof PowsyblException);
         assertEquals("Injection 'a' not found", e.getCause().getMessage());
     }
@@ -255,28 +224,31 @@ public abstract class AbstractSensitivityAnalysisTest extends AbstractConverterT
         runAcLf(network);
 
         SensitivityAnalysisParameters sensiParameters = createParameters(dc, "VLLOAD_0");
-        SensitivityFactorsProvider factorsProvider = n -> {
-            Branch branch = n.getBranch("NHV1_NHV2_1");
-            return Collections.singletonList(new BranchFlowPerLinearGlsk(
-                createBranchFlow(branch),
-                new LinearGlsk("glsk", "glsk", Collections.singletonMap("a", 10f))
-            ));
-        };
-        CompletableFuture<SensitivityAnalysisResult> sensiResult = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID,
-                factorsProvider, Collections.emptyList(), sensiParameters, LocalComputationManager.getDefault());
-        CompletionException e = assertThrows(CompletionException.class, () -> sensiResult.join());
+
+        List<SensitivityFactor> factors = Collections.singletonList(createBranchFlowPerLinearGlsk("NHV1_NHV2_1", "glsk"));
+
+        List<Contingency> contingencies = Collections.emptyList();
+
+        List<SensitivityVariableSet> variableSets = Collections.singletonList(new SensitivityVariableSet("glsk", List.of(new WeightedSensitivityVariable("a", 10f))));
+
+        CompletionException e = assertThrows(CompletionException.class, () -> sensiRunner.run(network, factors, contingencies, variableSets, sensiParameters));
         assertTrue(e.getCause() instanceof PowsyblException);
         assertEquals("Injection 'a' not found", e.getCause().getMessage());
     }
 
     protected void testHvdcInjectionNotFound(boolean dc) {
         SensitivityAnalysisParameters sensiParameters = createParameters(dc, "b1_vl_0", true);
-        Network network = HvdcNetworkFactory.createTwoCcLinkedByAHvdcWithGenerators();
-        ContingencyContext contingencyContext = new ContingencyContext(null, ContingencyContextType.ALL);
-        List<SensitivityFactor2> factors = List.of(new SensitivityFactor2(SensitivityFunctionType.BRANCH_ACTIVE_POWER, "l12", SensitivityVariableType.HVDC_LINE_ACTIVE_POWER, "nop", false, contingencyContext));
 
-        PowsyblException e = assertThrows(PowsyblException.class, () -> sensiProvider.run(network, Collections.emptyList(), Collections.emptyList(), sensiParameters, factors));
-        assertEquals("HVDC line 'nop' cannot be found in the network.", e.getMessage());
+        Network network = HvdcNetworkFactory.createTwoCcLinkedByAHvdcWithGenerators();
+
+        List<SensitivityFactor> factors = List.of(createHvdcInjection("l12", "nop"));
+
+        List<Contingency> contingencies = Collections.emptyList();
+        List<SensitivityVariableSet> variableSets = Collections.emptyList();
+
+        CompletionException e = assertThrows(CompletionException.class, () -> sensiRunner.run(network, factors, contingencies, variableSets, sensiParameters));
+        assertTrue(e.getCause() instanceof PowsyblException);
+        assertEquals("HVDC line 'nop' cannot be found in the network.", e.getCause().getMessage());
     }
 
     protected void testBranchNotFound(boolean dc) {
@@ -284,14 +256,13 @@ public abstract class AbstractSensitivityAnalysisTest extends AbstractConverterT
         runAcLf(network);
 
         SensitivityAnalysisParameters sensiParameters = createParameters(dc, "VLLOAD_0");
-        SensitivityFactorsProvider factorsProvider = n -> {
-            Generator gen = n.getGenerator("GEN");
-            return Collections.singletonList(new BranchFlowPerInjectionIncrease(new BranchFlow("b", "b", "b"),
-                    createInjectionIncrease(gen)));
-        };
-        CompletableFuture<SensitivityAnalysisResult> sensiResult = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID,
-                factorsProvider, Collections.emptyList(), sensiParameters, LocalComputationManager.getDefault());
-        CompletionException e = assertThrows(CompletionException.class, () -> sensiResult.join());
+
+        List<SensitivityFactor> factors = List.of(createBranchFlowPerInjectionIncrease("b", "GEN"));
+
+        List<Contingency> contingencies = Collections.emptyList();
+        List<SensitivityVariableSet> variableSets = Collections.emptyList();
+
+        CompletionException e = assertThrows(CompletionException.class, () -> sensiRunner.run(network, factors, contingencies, variableSets, sensiParameters));
         assertTrue(e.getCause() instanceof PowsyblException);
         assertEquals("Branch 'b' not found", e.getCause().getMessage());
     }
@@ -301,55 +272,55 @@ public abstract class AbstractSensitivityAnalysisTest extends AbstractConverterT
         runAcLf(network);
 
         SensitivityAnalysisParameters sensiParameters = createParameters(dc, "VLLOAD_0");
-        SensitivityFactorsProvider factorsProvider = n -> Collections.emptyList();
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, Collections.emptyList(), sensiParameters, LocalComputationManager.getDefault()).join();
-        assertTrue(result.getSensitivityValues().isEmpty());
+
+        List<SensitivityFactor> factors = Collections.emptyList();
+
+        SensitivityAnalysisResult result = sensiRunner.run(network, factors, Collections.emptyList(), Collections.emptyList(), sensiParameters);
+
+        assertTrue(result.getValues().isEmpty());
     }
 
     protected void testBranchFunctionOutsideMainComponent(boolean dc) {
         Network network = HvdcNetworkFactory.createLccWithBiggerComponents();
 
         SensitivityAnalysisParameters sensiParameters = createParameters(dc, "vl1_0");
-        SensitivityFactorsProvider factorsProvider = n -> {
-            Generator gen = n.getGenerator("g1");
-            return Collections.singletonList(new BranchFlowPerInjectionIncrease(new BranchFlow("l56", "l56", "l56"),
-                createInjectionIncrease(gen)));
-        };
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, Collections.emptyList(), sensiParameters, LocalComputationManager.getDefault()).join();
-        assertEquals(1, result.getSensitivityValues().size());
-        assertEquals(0d, result.getSensitivityValues().iterator().next().getValue());
+
+        List<SensitivityFactor> factors = List.of(createBranchFlowPerInjectionIncrease("l56", "g1"));
+
+        SensitivityAnalysisResult result = sensiRunner.run(network, factors, Collections.emptyList(), Collections.emptyList(), sensiParameters);
+
+        assertEquals(1, result.getValues().size());
+        assertEquals(0d, result.getValues().iterator().next().getValue());
     }
 
     protected void testInjectionOutsideMainComponent(boolean dc) {
         Network network = HvdcNetworkFactory.createLccWithBiggerComponents();
 
         SensitivityAnalysisParameters sensiParameters = createParameters(dc, "vl1_0");
-        SensitivityFactorsProvider factorsProvider = n -> {
-            Generator gen = n.getGenerator("g3");
-            return Collections.singletonList(new BranchFlowPerInjectionIncrease(new BranchFlow("l12", "l12", "l12"),
-                createInjectionIncrease(gen)));
-        };
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, Collections.emptyList(), sensiParameters, LocalComputationManager.getDefault()).join();
-        assertEquals(1, result.getSensitivityValues().size());
-        assertEquals(0f, getValue(result, "g3", "l12"), LoadFlowAssert.DELTA_POWER);
+
+        List<SensitivityFactor> factors = List.of(createBranchFlowPerInjectionIncrease("l12", "g3"));
+
+        SensitivityAnalysisResult result = sensiRunner.run(network, factors, Collections.emptyList(), Collections.emptyList(), sensiParameters);
+
+        assertEquals(1, result.getValues().size());
+        assertEquals(0f, result.getSensitivityValue("g3", "l12"), LoadFlowAssert.DELTA_POWER);
     }
 
     protected void testPhaseShifterOutsideMainComponent(boolean dc) {
         Network network = HvdcNetworkFactory.createLccWithBiggerComponents();
 
         SensitivityAnalysisParameters sensiParameters = createParameters(dc, "vl1_0");
-        SensitivityFactorsProvider factorsProvider = n -> {
-            return Collections.singletonList(new BranchFlowPerPSTAngle(new BranchFlow("l12", "l12", "l12"),
-                new PhaseTapChangerAngle("l45", "l45", "l45")));
-        };
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, Collections.emptyList(), sensiParameters, LocalComputationManager.getDefault()).join();
-        assertEquals(1, result.getSensitivityValues().size());
-        assertEquals(0d, getValue(result, "l45", "l12"), LoadFlowAssert.DELTA_POWER);
 
+        List<SensitivityFactor> factors = List.of(createBranchFlowPerPSTAngle("l12", "l45"));
+
+        SensitivityAnalysisResult result = sensiRunner.run(network, factors, Collections.emptyList(), Collections.emptyList(), sensiParameters);
+
+        assertEquals(1, result.getValues().size());
+        assertEquals(0d, result.getSensitivityValue("l45", "l12"), LoadFlowAssert.DELTA_POWER);
         if (dc) {
-            assertEquals(100.050, getFunctionReference(result, network.getBranch("l12").getId()), LoadFlowAssert.DELTA_POWER);
+            assertEquals(100.050, result.getFunctionReferenceValue("l12"), LoadFlowAssert.DELTA_POWER);
         } else {
-            assertEquals(100.131, getFunctionReference(result, network.getBranch("l12").getId()), LoadFlowAssert.DELTA_POWER);
+            assertEquals(100.131, result.getFunctionReferenceValue("l12"), LoadFlowAssert.DELTA_POWER);
         }
     }
 
@@ -357,20 +328,20 @@ public abstract class AbstractSensitivityAnalysisTest extends AbstractConverterT
         Network network = HvdcNetworkFactory.createLccWithBiggerComponents();
 
         SensitivityAnalysisParameters sensiParameters = createParameters(dc, "vl1_0");
-        SensitivityFactorsProvider factorsProvider = n -> {
-            Map<String, Float> glskMap = new HashMap<>();
-            glskMap.put("g6", 1f);
-            glskMap.put("g3", 2f);
-            return Collections.singletonList(new BranchFlowPerLinearGlsk(new BranchFlow("l12", "l12", "l12"),
-                new LinearGlsk("glsk", "glsk", glskMap)));
-        };
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, Collections.emptyList(), sensiParameters, LocalComputationManager.getDefault()).join();
-        assertEquals(1, result.getSensitivityValues().size());
-        assertEquals(0, getValue(result, "glsk", "l12"), LoadFlowAssert.DELTA_POWER);
+
+        List<SensitivityFactor> factors = List.of(createBranchFlowPerLinearGlsk("l12", "glsk"));
+
+        List<SensitivityVariableSet> variableSets = Collections.singletonList(new SensitivityVariableSet("glsk", List.of(new WeightedSensitivityVariable("g6", 1f),
+                                                                                                                         new WeightedSensitivityVariable("g3", 2f))));
+
+        SensitivityAnalysisResult result = sensiRunner.run(network, factors, Collections.emptyList(), variableSets, sensiParameters);
+
+        assertEquals(1, result.getValues().size());
+        assertEquals(0, result.getSensitivityValue("glsk", "l12"), LoadFlowAssert.DELTA_POWER);
         if (dc) {
-            assertEquals(100.050, getFunctionReference(result, network.getBranch("l12").getId()), LoadFlowAssert.DELTA_POWER);
+            assertEquals(100.050, result.getFunctionReferenceValue("l12"), LoadFlowAssert.DELTA_POWER);
         } else {
-            assertEquals(100.131, getFunctionReference(result, network.getBranch("l12").getId()), LoadFlowAssert.DELTA_POWER);
+            assertEquals(100.131, result.getFunctionReferenceValue("l12"), LoadFlowAssert.DELTA_POWER);
         }
     }
 
@@ -378,38 +349,37 @@ public abstract class AbstractSensitivityAnalysisTest extends AbstractConverterT
         Network network = HvdcNetworkFactory.createLccWithBiggerComponents();
 
         SensitivityAnalysisParameters sensiParameters = createParameters(dc, "vl1_0");
-        SensitivityFactorsProvider factorsProvider = n -> {
-            Map<String, Float> glskMap = new HashMap<>();
-            glskMap.put("g6", 1f);
-            glskMap.put("g3", 2f);
-            return Collections.singletonList(new BranchFlowPerLinearGlsk(new BranchFlow("l56", "l56", "l56"),
-                    new LinearGlsk("glsk", "glsk", glskMap)));
-        };
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, Collections.emptyList(), sensiParameters, LocalComputationManager.getDefault()).join();
-        assertEquals(1, result.getSensitivityValues().size());
-        assertEquals(Double.NaN, getValue(result, "glsk", "l56"), LoadFlowAssert.DELTA_POWER);
-        assertEquals(Double.NaN, getFunctionReference(result, network.getBranch("l56").getId()), LoadFlowAssert.DELTA_POWER);
+
+        List<SensitivityFactor> factors = List.of(createBranchFlowPerLinearGlsk("l56",  "glsk"));
+
+        List<SensitivityVariableSet> variableSets = List.of(new SensitivityVariableSet("glsk", List.of(new WeightedSensitivityVariable("g6", 1f),
+                                                                                                       new WeightedSensitivityVariable("g3", 2f))));
+
+        SensitivityAnalysisResult result = sensiRunner.run(network, factors, Collections.emptyList(), variableSets, sensiParameters);
+
+        assertEquals(1, result.getValues().size());
+        assertEquals(Double.NaN, result.getSensitivityValue("glsk", "l56"), LoadFlowAssert.DELTA_POWER);
+        assertEquals(Double.NaN, result.getFunctionReferenceValue("l56"), LoadFlowAssert.DELTA_POWER);
     }
 
     protected void testGlskPartiallyOutsideMainComponent(boolean dc) {
         Network network = HvdcNetworkFactory.createLccWithBiggerComponents();
 
         SensitivityAnalysisParameters sensiParameters = createParameters(dc, "vl1_0");
-        SensitivityFactorsProvider factorsProvider = n -> {
-            Map<String, Float> glskMap = new HashMap<>();
-            glskMap.put("ld2", 1f);
-            glskMap.put("g3", 2f);
-            return Collections.singletonList(new BranchFlowPerLinearGlsk(new BranchFlow("l12", "l12", "l12"),
-                new LinearGlsk("glsk", "glsk", glskMap)));
-        };
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, Collections.emptyList(), sensiParameters, LocalComputationManager.getDefault()).join();
-        assertEquals(1, result.getSensitivityValues().size());
 
-        SensitivityFactorsProvider factorsProviderInjection = n -> {
-            return Collections.singletonList(new BranchFlowPerInjectionIncrease(new BranchFlow("l12", "l12", "l12"),
-                new InjectionIncrease("ld2", "ld2", "ld2")));
-        };
-        SensitivityAnalysisResult resultInjection = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProviderInjection, Collections.emptyList(), sensiParameters, LocalComputationManager.getDefault()).join();
-        assertEquals(resultInjection.getSensitivityValues().iterator().next().getValue(), result.getSensitivityValues().iterator().next().getValue(), LoadFlowAssert.DELTA_POWER);
+        List<SensitivityFactor> factors = List.of(createBranchFlowPerLinearGlsk("l12", "glsk"));
+
+        List<SensitivityVariableSet> variableSets = List.of(new SensitivityVariableSet("glsk", List.of(new WeightedSensitivityVariable("ld2", 1f),
+                                                                                                       new WeightedSensitivityVariable("g3", 2f))));
+
+        SensitivityAnalysisResult result = sensiRunner.run(network, factors, Collections.emptyList(), variableSets, sensiParameters);
+
+        assertEquals(1, result.getValues().size());
+
+        List<SensitivityFactor> factorsInjection = List.of(createBranchFlowPerInjectionIncrease("l12", "ld2"));
+
+        SensitivityAnalysisResult resultInjection = sensiRunner.run(network, factorsInjection, Collections.emptyList(), Collections.emptyList(), sensiParameters);
+
+        assertEquals(resultInjection.getValues().iterator().next().getValue(), result.getValues().iterator().next().getValue(), LoadFlowAssert.DELTA_POWER);
     }
 }
